Worked on colors, text shadows, background image, projects
Still trying to figure out how useInView works for navbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,8 +9,9 @@ html,
 body,
 #root,
 .app {
-  height: 100%;
-  background-color: #fbf9f3;
   @apply text-white;
   font-family: "Quicksand", sans-serif;
+}
+.linux {
+  filter: saturate(50%);
 }
