--- a/frontend/public/output.css
+++ b/frontend/public/output.css
@@ -772,6 +772,38 @@ video {
   height: 100%;
 }
 
+.h-\[600px\]{
+  height: 600px;
+}
+
+.h-\[800px\]{
+  height: 800px;
+}
+
+.h-\[1000px\]{
+  height: 1000px;
+}
+
+.h-\[700px\]{
+  height: 700px;
+}
+
+.h-\[650px\]{
+  height: 650px;
+}
+
+.h-\[665px\]{
+  height: 665px;
+}
+
+.h-\[690px\]{
+  height: 690px;
+}
+
+.h-\[695px\]{
+  height: 695px;
+}
+
 .w-2\/5{
   width: 40%;
 }
@@ -796,6 +828,26 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-4{
+  width: 1rem;
+}
+
+.w-16{
+  width: 4rem;
+}
+
+.w-24{
+  width: 6rem;
+}
+
+.w-20{
+  width: 5rem;
+}
+
+.w-96{
+  width: 24rem;
 }
 
 .max-w-\[1320px\]{
@@ -884,12 +936,20 @@ video {
   list-style-type: disc;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-row{
   flex-direction: row;
 }
 
 .flex-col{
   flex-direction: column;
+}
+
+.flex-wrap{
+  flex-wrap: wrap;
 }
 
 .place-content-center{
@@ -1030,8 +1090,20 @@ video {
   background-image: url('./assets/profile.jpg');
 }
 
+.bg-kanban{
+  background-image: url('./assets/kanban.png');
+}
+
 .bg-cover{
   background-size: cover;
+}
+
+.bg-auto{
+  background-size: auto;
+}
+
+.bg-contain{
+  background-size: contain;
 }
 
 .bg-center{
@@ -1052,6 +1124,10 @@ video {
 
 .p-5{
   padding: 1.25rem;
+}
+
+.p-20{
+  padding: 5rem;
 }
 
 .px-10{
@@ -1082,6 +1158,11 @@ video {
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .pr-5{
@@ -1440,9 +1521,17 @@ body,
     top: 33.333333%;
   }
 
+  .ss\:col-span-1{
+    grid-column: span 1 / span 1;
+  }
+
   .ss\:mx-5{
     margin-left: 1.25rem;
     margin-right: 1.25rem;
+  }
+
+  .ss\:grid{
+    display: grid;
   }
 
   .ss\:h-60{
@@ -1463,6 +1552,10 @@ body,
 
   .ss\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .ss\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .ss\:text-\[150px\]{
@@ -1488,6 +1581,15 @@ body,
   .ss\:text-\[70px\]{
     font-size: 70px;
   }
+
+  .ss\:text-\[40px\]{
+    font-size: 40px;
+  }
+
+  .ss\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
 }
 
 @media (min-width: 1024px){
@@ -1503,6 +1605,10 @@ body,
     grid-column: span 2 / span 2;
   }
 
+  .sm\:col-span-4{
+    grid-column: span 4 / span 4;
+  }
+
   .sm\:mx-5{
     margin-left: 1.25rem;
     margin-right: 1.25rem;
@@ -1514,6 +1620,12 @@ body,
 
   .sm\:h-auto{
     height: auto;
+  }
+
+  .sm\:h-fit{
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
 
   .sm\:w-36{
@@ -1559,6 +1671,26 @@ body,
   .sm\:text-\[75px\]{
     font-size: 75px;
   }
+
+  .sm\:text-\[60px\]{
+    font-size: 60px;
+  }
+
+  .sm\:text-\[15px\]{
+    font-size: 15px;
+  }
+
+  .sm\:text-\[18px\]{
+    font-size: 18px;
+  }
+
+  .sm\:text-\[50px\]{
+    font-size: 50px;
+  }
+
+  .sm\:text-\[40px\]{
+    font-size: 40px;
+  }
 }
 
 @media (min-width: 1280px){
@@ -1576,6 +1708,10 @@ body,
 
   .md\:col-span-4{
     grid-column: span 4 / span 4;
+  }
+
+  .md\:col-span-3{
+    grid-column: span 3 / span 3;
   }
 
   .md\:row-span-2{
@@ -1613,6 +1749,23 @@ body,
   .md\:text-\[80px\]{
     font-size: 80px;
   }
+
+  .md\:text-\[60px\]{
+    font-size: 60px;
+  }
+
+  .md\:text-6xl{
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-\[75px\]{
+    font-size: 75px;
+  }
+
+  .md\:text-\[\]{
+    color: ;
+  }
 }
 
 @media (min-width: 1920px){
@@ -1647,6 +1800,10 @@ body,
 
   .lg\:h-auto{
     height: auto;
+  }
+
+  .lg\:h-\[576px\]{
+    height: 576px;
   }
 
   .lg\:grid-cols-4{
